# woyta-pad-firmware

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
core/: default_bitmaps.h  encoder.c  encoder.h  keycodes.h  keymap_store.c  keymap_store.h  macro.c  macro.h  main.c  matrix.c  oled.c  oled.cpp  oled.h  oled_assets.h  oled_types.h  tusb_config.h  usb_descriptors.c
keyboards/example-3x3/: assets.h  keyboard.json  keymap.c
keyboards/woyta-pad/: assets.h  keyboard.json  keymap.c
tools/: generate_config.py  image_to_byte_array.py
